création de mes entités

--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -20,10 +20,10 @@
         </li>
       </ul>
         <div class="d-flex " >
-          {# <a href={{ path('app_register') }} class="btn btn-outline-dark  me-lg-2 me-3" > #}
+          <a href={{ path('app_register') }} class="btn btn-outline-dark  me-lg-2 me-3" >
             Inscription
           </a>
-          {# <a href={{ path('app_login') }} class="btn btn-outline-dark  me-lg-2 me-3" > #}
+          <a href={{ path('app_login') }} class="btn btn-outline-dark  me-lg-2 me-3" >
             Connexion
           </a>
 
