--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@300..900&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/assets/css/bootstrap.css">
-        <link rel="stylesheet" href="/assets/css/style.css">
-        <script src="/assets/css/bootstrap.bundle.min.js" defer></script>
+        <link rel="stylesheet" href="/asset/css/bootstrap.css">
+        <link rel="stylesheet" href="/asset/css/style.css">
+        <script src="/asset/css/bootstrap.bundle.min.js" defer></script>
         {% block stylesheets %}
         {% endblock %}
 
