--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -16,7 +16,7 @@
           <a class="nav-link me-2" href="#">Contact</a>
         </li>
         <li class="nav-item">
-          {# <a href={{path('admin')}} class="nav-link me-2 " aria-disabled="true">Admin</a> #}
+          <a href={{path('admin')}} class="nav-link me-2 " aria-disabled="true">Admin</a>
         </li>
       </ul>
         <div class="d-flex " >
