mise en place du de contacttype

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -21,4 +21,53 @@
     {# debut barre de recherche  #}
         {{ include('partials/_booking.html.twig') }}
     {# fin barre de recherche  #}
+
+    <div class="container">
+        <div class="text-center " >
+            <h6 class="section-title text-center text-primary text-uppercase">Contacter nous</h6>
+            <h1 class="mb-5"><span class="text-primary text-uppercase">Nous Contactez</span> pour toute question</h1>
+        </div>
+        <div class="row g-4">
+            <div class="col-md-6" >
+
+            <iframe class="position-relative rounded w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3900.2091527443667!2d44.39653819286463!3d-12.166159181349835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x18a1cd83f56addb3%3A0x1f17d23729c83e14!2sMutsamudu!5e0!3m2!1sfr!2sfr!4v1714852030853!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                
+            </div>
+            <div class="col-md-6">
+                <form>
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="name" placeholder="Your Name">
+                                <label for="name">Your Name</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-floating">
+                                <input type="email" class="form-control" id="email" placeholder="Your Email">
+                                <label for="email">Your Email</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <input type="text" class="form-control" id="subject" placeholder="Subject">
+                                <label for="subject">Subject</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-floating">
+                                <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 150px"></textarea>
+                                <label for="message">Message</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                        </div>
+                    </div>
+                </form>
+                
+            </div>
+        
+        </div>
+    </div>
 {% endblock %}
