debut de mise en page de ma page detail de chambre

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,8 @@
         {% block javascripts %}
         {% endblock %}
         <script src="{{ asset('asset/js/bootstrap.bundle.min.js') }}" defer></script>
-        <script src="{{ asset('asset/lib/counterup/counterup.min.js') }}" defer></script> 
+        <script src="{{ asset('asset/js/monjs.js') }}" defer></script>
+        
     </head>
     <body>
    
