--- a/templates/partials/_booking.html.twig
+++ b/templates/partials/_booking.html.twig
@@ -3,7 +3,7 @@
             <div class="bg-white shadow" style="padding: 35px;">
                 <div class="row g-2">
                     <div class="col-md-12">
-                        <form action=""></form>
+                        <form action="">
                             <div class="row d-flex align-items-end">
                                 <div class="col-md-3 mb-3">
                                     <label class="form-label" style="font-weight:500,">Date d'arrivée</label>
@@ -43,3 +43,4 @@
             </div>
         </div>
         <!-- Booking End -->
+        
