--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -21,7 +21,7 @@
                                 <a href={{ path('app_acceuil') }} class="nav-item nav-link active">Acceuil</a>
                                 <a href="" class="nav-item nav-link">A Propos</a>
                                 <a href="" class="nav-item nav-link">Services</a>
-                                <a href="" class="nav-item nav-link">Chambres</a>
+                                <a href={{path('app_chambre_index')}} class="nav-item nav-link">Chambres</a>
                                 <a href={{path('app_contact')}} class="nav-item nav-link">Contact</a>
                                 <a href={{ path('admin') }} class="nav-item nav-link">Admin</a>
                             </div>
