--- a/templates/chambre/index.html.twig
+++ b/templates/chambre/index.html.twig
@@ -3,41 +3,100 @@
 {% block title %}Chambre index{% endblock %}
 
 {% block body %}
-    <h1>Chambre index</h1>
+    <!-- Page Header Start -->
+        <div class="container-fluid page-header mb-5 p-0" style="background-image: url(/asset/img/carousel-1.jpg);">
+            <div class="container-fluid page-header-inner py-5">
+                <div class="container text-center pb-5">
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Nos chambres</h1>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb justify-content-center text-uppercase">
+                            <li class="breadcrumb-item"><a href={{path('app_acceuil')}}>Acceuil</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Chambre</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <!-- Page Header End -->
+    
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Numero</th>
-                <th>CapaciteAdulte</th>
-                <th>CapaciteEnfant</th>
-                <th>Statut</th>
-                <th>Prix</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for chambre in chambres %}
-            <tr>
-                <td>{{ chambre.id }}</td>
-                <td>{{ chambre.numero }}</td>
-                <td>{{ chambre.capaciteAdulte }}</td>
-                <td>{{ chambre.capaciteEnfant }}</td>
-                <td>{{ chambre.statut ? 'Yes' : 'No' }}</td>
-                <td>{{ chambre.prix }}</td>
-                <td>
-                    <a href="{{ path('app_chambre_show', {'id': chambre.id}) }}">show</a>
-                    <a href="{{ path('app_chambre_edit', {'id': chambre.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="7">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <div class="container-xxl py-5">
+            <div class="container">
+                <div class="row ">
+                    <div class="col-12 col-lg-4">
+                        <div class="form">
+                            <div class="form-group mb-4">
+                                <label for="DateArrivee">Date</label>
+                                    <div class="row g-0">
+                                        <div class="col-6">
+                                            <input type="date" class="input-small form-control" id="DateArrivee" >
+                                        </div>
+                                        <div class="col-6">
+                                            <input type="date" class="input-small form-control"  >
+                                        </div>
+                                    </div>
+                            </div>
+                            <div class="form-group mb-4">
+                                <label for="invites">invitées</label>
+                                <div class="row g-0">
+                                    <div class="col-6">
+                                        <select name="adults" id="invites" class="form-select form-select-sm">
+                                            <option selected>Adultes</option>
+                                            <option value="01">01</option>
+                                            <option value="02">02</option>
+                                            <option value="03">03</option>
+                                            <option value="04">04</option>
+                                            <option value="05">05</option>
+                                            <option value="06">06</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-6">
+                                        <select name="enfants" id="enfants" class="form-select form-select-sm">
+                                            <option selected>Enfants</option>
+                                            <option value="01">01</option>
+                                            <option value="02">02</option>
+                                            <option value="03">03</option>
+                                            <option value="04">04</option>
+                                            <option value="05">05</option>
+                                            <option value="06">06</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
 
-    <a href="{{ path('app_chambre_new') }}">Create new</a>
+                            <div class="form-group mb-5">
+                                <label for="customRange1" class="form-label">Prix</label>
+                                <output id="priceOutput">0€</output>
+                                <input type="range" class="form-range" id="customRange1">
+                                
+                            </div>
+
+
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary w-100">Rechercher</button>
+                            </div>
+                        </div>
+                
+                
+                    
+                    
+                
+                    
+
+
+                    </div>
+                    <div class="col-12 col-lg-8">
+                        
+                    </div>
+                        
+                                                    
+                </div>
+                    
+                </div>
+            </div>
+        </div>
+
+
+
+    
 {% endblock %}
