--- a/templates/chambre/show.html.twig
+++ b/templates/chambre/show.html.twig
@@ -3,40 +3,22 @@
 {% block title %}Chambre{% endblock %}
 
 {% block body %}
-    <h1>Chambre</h1>
+    <!-- Page Header Start -->
+        <div class="container-fluid page-header mb-3 p-0" style="background-image: url(/asset/img/carousel-2.jpg);">
+            <div class="container-fluid page-header-inner py-5">
+                <div class="container text-center pb-5">
+                    <h1 class="display-3 text-white mb-3 animated slideInDown">Chambre</h1>
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb justify-content-center text-uppercase">
+                            <li class="breadcrumb-item"><a href={{path('app_acceuil')}}>Acceuil</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">Chambre</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <!-- Page Header End -->
+    
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ chambre.id }}</td>
-            </tr>
-            <tr>
-                <th>Numero</th>
-                <td>{{ chambre.numero }}</td>
-            </tr>
-            <tr>
-                <th>CapaciteAdulte</th>
-                <td>{{ chambre.capaciteAdulte }}</td>
-            </tr>
-            <tr>
-                <th>CapaciteEnfant</th>
-                <td>{{ chambre.capaciteEnfant }}</td>
-            </tr>
-            <tr>
-                <th>Statut</th>
-                <td>{{ chambre.statut ? 'Yes' : 'No' }}</td>
-            </tr>
-            <tr>
-                <th>Prix</th>
-                <td>{{ chambre.prix }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('app_chambre_index') }}">back to list</a>
-
-    <a href="{{ path('app_chambre_edit', {'id': chambre.id}) }}">edit</a>
-
-    {{ include('chambre/_delete_form.html.twig') }}
+    
 {% endblock %}
