--- a/templates/partials/_nosChambre.html.twig
+++ b/templates/partials/_nosChambre.html.twig
@@ -11,7 +11,7 @@
                         <div class="col-lg-4 col-md-6 " >
                             <div class="room-item shadow rounded overflow-hidden">
                                 <div class="position-relative">
-                                {% for image in chambre.images %}
+                                {% for image in chambre.images|slice(0, 1) %}
                                     <img class="img-fluid"  src="{{ vich_uploader_asset(image,'imageFile') }}" alt="Image">
                                 {% endfor %}
                                     <small class="position-absolute start-0 top-100 translate-middle-y bg-primary text-white rounded py-1 px-3 ms-4">{{ chambre.prix / 100 }} €/Nuit</small>
@@ -24,7 +24,7 @@
                                             <small class="fa fa-star text-primary"></small>
                                         </div>
                                     </div>
-                                    <div class="d-flex mb-3">
+                                    <div class="d-flex flex-wrap mb-3">
                                         <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>{{chambre.lits}} lits</small>
                                         <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>{{chambre.sallesDeBain}} Salle de bains</small>
                                         {% for service in chambre.services %}
