--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -239,34 +239,6 @@
     }
 }
 
-#videoModal {
-    z-index: 99999;
-}
-
-#videoModal .modal-dialog {
-    position: relative;
-    max-width: 800px;
-    margin: 60px auto 0 auto;
-}
-
-#videoModal .modal-body {
-    position: relative;
-    padding: 0px;
-}
-
-#videoModal .close {
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    right: 0px;
-    top: -30px;
-    z-index: 999;
-    font-size: 30px;
-    font-weight:normal;
-    color: #FFFFFF;
-    background: #000000;
-    opacity: 1;
-}
 
 
 /*** Testimonial ***/
@@ -337,6 +309,16 @@
 .team-item:hover .bg-primary i {
     color: var(--secondary) !important;
 }
+
+/***page des chambres***/
+.primary{
+    color: var(--primary);
+}
+
+
+
+
+/***page des chambres***/
 
 
 /*** Footer ***/
