--- a/templates/chambre/index.html.twig
+++ b/templates/chambre/index.html.twig
@@ -21,10 +21,10 @@
     
 
         <div class="container-xxl py-5">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row ">
                     <div class="col-12 col-lg-4">
-                        <div class="form">
+                        <div class="form mb-5">
                             <div class="form-group mb-4">
                                 <label for="DateArrivee">Date</label>
                                     <div class="row g-0">
@@ -64,7 +64,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group mb-5">
+                            <div class="form-group ">
                                 <label for="customRange1" class="form-label">Prix</label>
                                 <output id="priceOutput">0€</output>
                                 <input type="range" class="form-range" id="customRange1">
@@ -76,20 +76,47 @@
                                 <button type="submit" class="btn btn-primary w-100">Rechercher</button>
                             </div>
                         </div>
-                
-                
-                    
-                    
-                
-                    
-
-
+            
                     </div>
-                    <div class="col-12 col-lg-8">
+
+                    <div class="col-12 col-lg-8 ">
+                        {% for chambre in chambres  %}
+                            
                         
+                            <div class="room-item shadow-sm  rounded d-md-flex align-items-center mb-5 ">
+                                <div class="position-relative">
+                                {% for image in chambre.images |slice(0, 1) %}
+                                    <img class="img-fluid"  src="{{ vich_uploader_asset(image,'imageFile') }}" alt="Image">
+                                {% endfor %}
+                                </div>
+                                <div class="p-4 mt-2">
+                                    <div class="d-flex  mb-3">
+                                        <h5 class="mb-0">{{chambre.typeDeChambre.nom}}</h5>
+                                        <div class="ps-5">
+                                            <small class="fa fa-star text-primary"></small>
+                                            <small class="fa fa-star text-primary"></small>
+                                        </div>
+                                    </div>
+                                    <h6><span class="bg-primary text-white rounded py-1 px-3 ">{{ chambre.prix / 100 }} €/Nuit</span></h6>
+                                    <div class="d-flex flex-wrap mb-3 mt-4">
+                                        <small class="border-end me-3 pe-3"><i class="fa fa-bed text-primary me-2"></i>2 lits</small>
+                                        <small class="border-end me-3 pe-3"><i class="fa fa-bath text-primary me-2"></i>3 Salle de bains</small>
+                                        <small> Services: wifi , television ... </small> 
+                                        
+                                        
+                                    </div>
+                                    <p class="text-body mb-3">{{chambre.typeDeChambre.description}} </p>
+                                    <div class="d-flex justify-content-between">
+                                        <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">Voir détail</a>
+                                        <a class="btn btn-sm btn-dark rounded py-2 px-4" href="">Réserver</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}        
+  
                     </div>
-                        
-                                                    
+
+                    
                 </div>
                     
                 </div>
