--- a/templates/partials/_booking.html.twig
+++ b/templates/partials/_booking.html.twig
@@ -1,41 +1,39 @@
 <!-- Booking Start -->
         <div class="container-fluid booking pb-5 " >
-            <div class="bg-white shadow" style="padding: 35px;">
+            <div class="bg-light shadow" style="padding: 25px;">
                 <div class="row g-2">
                     <div class="col-md-12">
-                        <form action="">
+                        
+                        {{ form_start(form) }}
                             <div class="row d-flex align-items-end">
                                 <div class="col-md-3 mb-3">
-                                    <label class="form-label" style="font-weight:500,">Date d'arrivée</label>
-                                    <input type="date" class="form-control ">
+                                    {{ form_label(form.dateArrivee,'Date d\'arrivée',{'attr':{'class':'form-label'}}) }}
+                                    {# <label class="form-label" style="font-weight:500,">Date d'arrivée</label> #}
+                                    {{ form_widget(form.dateArrivee,{'attr':{'class':' form-control-sm datepicker', 'placeholder': 'dd- mm- yyyy'}}) }}
+                                    
                                 </div>
                                 <div class="col-md-3 mb-3">
-                                    <label class="form-label" style="font-weight:500,">Date d'arrivée</label>
-                                    <input type="date" class="form-control ">
+                                    {{ form_label(form.dateDepart,'Date de départ',{'attr':{'class':'form-label'}}) }}
+                                    {{ form_widget(form.dateDepart,{'attr':{'class':' form-control-sm datepicker', 'placeholder': 'dd- mm- yyyy'}}) }}
+
                                 </div>
 
                                 <div class="col-md-2 mb-3">
-                                    <label class="form-label" style="font-weight:500,">Adultes</label>
-                                    <select class="form-select " aria-label="Default select example">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                    </select>
+                                    {# <label class="form-label" style="font-weight:500,">Adultes</label> #}
+                                    {{ form_label(form.capaciteAdulte, 'Adultes') }}
+                                    {{ form_widget(form.capaciteAdulte, {'attr': {'class': ' form-control-sm', 'placeholder': 'Nombre d\'adultes'}}) }}
                                 </div>
 
                                 <div class="col-md-2 mb-3">
-                                    <label class="form-label" style="font-weight:500,">Enfants</label>
-                                    <select class="form-select" aria-label="Default select example">
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                    </select>
+                                    {{ form_label(form.capaciteEnfant, 'Enfants') }}
+                                    {{ form_widget(form.capaciteEnfant, {'attr': {'class': ' form-control-sm', 'placeholder': 'Nombre d\'enfants'}}) }}
                                 </div>
                                 <div class="col-md-2 mb-3">
-                                    <button class="btn btn-primary w-100">Rechercher</button>
+                                    <button class="btn btn-primary btn-sm w-100 rounded">Rechercher</button>
                                 </div>
                             </div>
-                        </form>
+                        {{ form_end(form) }}
+                        
                     </div>
                     
                 </div>
