--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,13 +14,13 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
         
+
          <!-- Libraries de style -->
         <link href={{ asset('asset/lib/animate/animate.min.css') }} rel="stylesheet">
-        
 
         <!-- Css Bootstrap  -->
-        
         <link href={{asset('asset/css/bootstrap.min.css')}} rel="stylesheet">
+        <link href={{asset('asset/css/bootstrap-datepicker.min.css')}} rel="stylesheet">
         <!-- Template Style -->
         <link rel="stylesheet" href={{ asset('asset/css/style.css') }}>
         
@@ -31,8 +31,7 @@
 
         {% block javascripts %}
         {% endblock %}
-        <script src="{{ asset('asset/js/bootstrap.bundle.min.js') }}" defer></script>
-        <script src="{{ asset('asset/js/monjs.js') }}" defer></script>
+        
         
     </head>
     <body>
@@ -44,5 +43,17 @@
         {{ include("partials/_footer.html.twig") }}
        </div>
        
+
+
+
+
+
+
+
+       <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="{{ asset('asset/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ asset('asset/js/bootstrap-datepicker.min.js') }}"></script>
+    <script src="{{ asset('asset/js/monjs.js') }}"></script>
     </body>
 </html>
