--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -18,9 +18,7 @@
             </div>
         </div>
         <!-- Page Header End -->
-    {# debut barre de recherche  #}
-        {{ include('partials/_booking.html.twig') }}
-    {# fin barre de recherche  #}
+    
     <div class="container">
         <div class="text-center " >
             <h6 class="section-title text-center text-primary text-uppercase">Contacter nous</h6>
@@ -50,7 +48,7 @@
                             {{ form_widget(form.sujet,{'attr':{'placeholder':'Sujet'}}) }}
                         </div>
                         <div class="col-12">
-                            {{ form_widget(form.message,{'attr':{'placeholder':'Votre message'}}) }}
+                            {{ form_widget(form.message,{'attr':{'placeholder':'Votre message','style': 'height: 300px;'}}) }}
                         </div>
                         <div class="col-12">
                             <button class="btn btn-primary w-100 py-3" type="submit">Envoyer le message</button>
