--- a/templates/partials/_nosChambre.html.twig
+++ b/templates/partials/_nosChambre.html.twig
@@ -7,7 +7,7 @@
                 </div>
                 <div class="row g-4">
 
-                    {% for chambre in chambres %}
+                    {% for chambre in chambres|slice(0, 3) %}
                         <div class="col-lg-4 col-md-6 " >
                             <div class="room-item shadow rounded overflow-hidden">
                                 <div class="position-relative">
