--- a/templates/chambre/show.html.twig
+++ b/templates/chambre/show.html.twig
@@ -1,24 +1,123 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Chambre{% endblock %}
+{% block title %}Détail Chambre{% endblock %}
 
 {% block body %}
-    <!-- Page Header Start -->
-        <div class="container-fluid page-header mb-3 p-0" style="background-image: url(/asset/img/carousel-2.jpg);">
-            <div class="container-fluid page-header-inner py-5">
-                <div class="container text-center pb-5">
-                    <h1 class="display-3 text-white mb-3 animated slideInDown">Chambre</h1>
-                    <nav aria-label="breadcrumb">
-                        <ol class="breadcrumb justify-content-center text-uppercase">
-                            <li class="breadcrumb-item"><a href={{path('app_acceuil')}}>Acceuil</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Chambre</li>
-                        </ol>
-                    </nav>
+<!-- Page Header Start -->
+<div class="container-fluid page-header mb-5 p-0" style="background-image: url(/asset/img/carousel-2.jpg); height: 200px;">
+    <div class="container-fluid page-header-inner  h-100 ">
+        <div class="row h-100 align-items-end">
+            <div class="col-12">
+                <div class="d-flex align-items-center justify-content-between pb-3">
+                    <h2 class="text-white">{{ chambre.typeDeChambre.nom }}</h2>
+                    <h2 class="text-white"><span class="h1 text-primary">{{ chambre.prix / 100 }} €</span> / Par nuit</h2>
                 </div>
             </div>
         </div>
-        <!-- Page Header End -->
-    
+    </div>
+</div>
+<!-- Page Header End -->
+
+<!-- Page room-detail start -->    
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="single-room-details mb-5">
+                <div class="room-thumbnail-slides mb-5 d-flex justify-content-center">
+                    <div id="room-thumbnail--slide" class="carousel slide w-50" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            {% for image in chambre.images %}
+                                <div class="carousel-item {% if loop.first %}active{% endif %}">
+                                    <img src="{{ vich_uploader_asset(image, 'imageFile') }}" class="d-block w-100  rounded  " alt="">
+                                </div>
+                            {% endfor %}
+                        </div>
+
+                        <ol class="carousel-indicators">
+                            {% for image in chambre.images %}
+                                <li data-bs-target="#room-thumbnail--slide" data-bs-slide-to="{{ loop.index0 }}" class="  {% if loop.first %}active{% endif %}" aria-current="{% if loop.first %}true{% endif %}" aria-label="Slide {{ loop.index }}">
+                                    <img src="{{ vich_uploader_asset(image, 'imageFile') }}" class="d-block w-100 indicators-image " alt="">
+                                </li>
+                            {% endfor %}
+                         </ol>
+                    </div>
+                </div>
+
+                 <!-- Room Features -->
+                <div class="room-features-area d-flex justify-content-center flex-wrap mb-5 ">
+                    <h6>Capacity: <span>{{chambre.capaciteAdulte}} Adultes & {{chambre.capaciteEnfant}} Enfants </span></h6>
+                    <h6>Lit: <span>{{chambre.lits}}</span></h6>
+                    
+                    <h6>Services:{% for service in chambre.services %} <span>{{service.nomService}}</span>{% endfor %}</h6>
+                    
+                    <h6>Salle de Bain: <span>{{chambre.sallesDeBain}}</span></h6>
+                </div>
+                <p class="text-center">{{chambre.typeDeChambre.description}}</p>
+        </div>
+    </div>
+</div>
+<!-- Page room-detail End -->
+
+<!-- section comment -->
+
+<div class="container mt-5 ms-4 mb-5">
+    <div class="row">
+        <div class="col-12 mb-5 ">
+            <h3>Avis Chambre</h3>
+            <a href="{{path('app_commentaire_new')}}">Ajouter commentaire</a>
+        </div>
+
+        <div class="col-8">
+            <div class="d-flex align-items-center mb-4">
+    <div class="me-3">
+        <i class="fas fa-user-circle fa-4x text-muted"></i>
+    </div>
+    <div>
+        <div class="d-flex align-items-center justify-content-between mb-2">
+            <div>
+                <span class="d-block text-muted">27 Aug 2019</span>
+                <h6 class="mb-0">Sounron Masha</h6>
+            </div>
+            <div class="ms-3 text-warning">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+            </div>
+        </div>
+        <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
+    </div>
+</div>
+        </div>
+    </div>
+</div>
+
+
+<!-- End page comment -->
+
+
+
+
+<!-- section contact -->
+
+<section class="nayir-contact mb-0">
+    <div class="container w-75 h-auto">
+        <div class="contact-content" style="background-image: url(/asset/img/carousel-2.jpg);">
+            <div class="row d-flex justify-content-space-between">
+                <div class="col-12 col-md-7">
+                    <div class="contact-text mb-5">
+                        <h2>Contactez-nous maintenant!</h2>
+                        <h6>Contactez le +33 0658645538 pour réserver directement ou pour obtenir des conseils</h6>
+                    </div>
+                </div>
+                <div class="col-12 col-md-5 text-md-right">
+                    <a href="#" class="btn btn-primary btn-lg mb-5">Contactez maintenant</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
     
 {% endblock %}
