--- a/templates/chambre/show.html.twig
+++ b/templates/chambre/show.html.twig
@@ -64,31 +64,40 @@
     <div class="row">
         <div class="col-12 mb-5 ">
             <h3>Avis Chambre</h3>
-            <a href="{{path('app_commentaire_new')}}">Ajouter commentaire</a>
+            <a href="{{ path('app_commentaire_new', { 'chambreId': chambre.id }) }}">Ajouter commentaire</a>
         </div>
 
         <div class="col-8">
-            <div class="d-flex align-items-center mb-4">
-    <div class="me-3">
-        <i class="fas fa-user-circle fa-4x text-muted"></i>
-    </div>
-    <div>
-        <div class="d-flex align-items-center justify-content-between mb-2">
-            <div>
-                <span class="d-block text-muted">27 Aug 2019</span>
-                <h6 class="mb-0">Sounron Masha</h6>
-            </div>
-            <div class="ms-3 text-warning">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-            </div>
-        </div>
-        <p class="mb-0">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora.</p>
-    </div>
-</div>
+        {% if chambre.commentaires is not empty %}
+            {% for commentaire in chambre.commentaires %}
+                    <div class="d-flex align-items-center mb-4">
+                        <div class="me-3">
+                            <i class="fas fa-user-circle fa-4x text-muted"></i>
+                        </div>
+                        <div>
+                            <div class="d-flex align-items-center justify-content-between mb-2">
+                                <div>
+                                    <span class="d-block text-muted">{{ commentaire.date|date('Y-m-d H:i:s') }}</span>
+                                    <h6 class="mb-0">{{commentaire.user.name}}</h6>
+                                </div>
+                                <div class="ms-3 text-warning">
+                                    {% set note = commentaire.note %}
+                                    {% for i in 1..5 %}
+                                        {% if i <= note %}
+                                            <i class="bi bi-star-fill"></i>
+                                        {% else %}
+                                            <i class="bi bi-star"></i>
+                                        {% endif %}
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <p class="mb-0">{{commentaire.contenu}}</p>
+                        </div>
+                    </div>
+            {% endfor %}
+        {% else %}
+            <p>Aucun commentaire</p>
+        {% endif %}
         </div>
     </div>
 </div>
@@ -112,7 +121,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-5 text-md-right">
-                    <a href="#" class="btn btn-primary btn-lg mb-5">Contactez maintenant</a>
+                    <a href={{ path('app_contact') }} class="btn btn-primary btn-lg mb-5">Contactez maintenant</a>
                 </div>
             </div>
         </div>
