--- a/templates/partials/_nosChambre.html.twig
+++ b/templates/partials/_nosChambre.html.twig
@@ -20,8 +20,16 @@
                                     <div class="d-flex justify-content-between mb-3">
                                         <h5 class="mb-0">{{chambre.typeDeChambre.nom}}</h5>
                                         <div class="ps-2">
-                                            <small class="fa fa-star text-primary"></small>
-                                            <small class="fa fa-star text-primary"></small>
+                                            {% set averageNote = chambre.noteMoyenne %}
+                                                {% for i in 1..5 %}
+                                                    {% if i <= averageNote %}
+                                                        <i class="bi bi-star-fill text-primary"></i> {# Étoile pleine #}
+                                                    {% elseif i <= averageNote + 0.5 %}
+                                                        <i class="bi bi-star-half text-primary"></i> {# Demi-étoile #}
+                                                    {% else %}
+                                                        <i class="bi bi-star text-primary"></i> {# Étoile vide #}
+                                                    {% endif %}
+                                                {% endfor %}
                                         </div>
                                     </div>
                                     <div class="d-flex flex-wrap mb-3">
@@ -35,7 +43,7 @@
                                     </div>
                                     <p class="text-body mb-3">{{chambre.typeDeChambre.description}}</p>
                                     <div class="d-flex justify-content-between">
-                                        <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">Voir détail</a>
+                                        <a class="btn btn-sm btn-primary rounded py-2 px-4" href={{ path('app_chambre_show',{'id':chambre.id}) }}>Voir détail</a>
                                         <a class="btn btn-sm btn-dark rounded py-2 px-4" href="">Réserver</a>
                                     </div>
                                 </div>
