--- a/templates/chambre/index.html.twig
+++ b/templates/chambre/index.html.twig
@@ -91,7 +91,7 @@
                                     <p class="text-body mb-3">{{chambre.typeDeChambre.description}} </p>
                                     <div class="d-flex justify-content-between">
                                         <a class="btn btn-sm btn-primary rounded py-2 px-4" href={{ path('app_chambre_show',{'id':chambre.id}) }}>Voir détail</a>
-                                        <a class="btn btn-sm btn-dark rounded py-2 px-4" href="">Réserver</a>
+                                        <a class="btn btn-sm btn-dark rounded py-2 px-4" href={{ path('app_chambres_reserver',{'id':chambre.id}) }}>Réserver</a>
                                     </div>
                                 </div>
                             </div>
