fin de la page twig de reservation

--- a/templates/reservations/reservation.html.twig
+++ b/templates/reservations/reservation.html.twig
@@ -51,7 +51,36 @@
                     <div class="col-lg-6">
                     {{ form_start(form) }}
                         <div class="row g-3">
-                            
+                            <div class="col-md-6">
+                                {{ form_widget(form.nom, {'attr':{'class':'form-control p-2', 'placeholder': 'Votre nom'}}) }}
+                            </div>
+                            <div class="col-md-6">
+                                {{ form_widget(form.prenom, {'attr':{'class':'form-control p-2', 'placeholder': 'Votre prénom'}}) }}
+                            </div>
+                            <div class="col-md-12">
+                                {{ form_widget(form.email, {'attr':{'class':'form-control p-2', 'placeholder': 'Votre adresse mail'}}) }}
+                            </div>
+                            <div class="col-md-6">
+                                {{ form_widget(form.dateArrive,{'attr':{'class':' form-control datepicker p-2', 'placeholder': 'dd- mm- yyyy'}}) }}                            </div>
+                            <div class="col-md-6">
+                                {{ form_widget(form.dateDepart,{'attr':{'class':' form-control datepicker p-2', 'placeholder': 'dd- mm- yyyy'}}) }}
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                    {{ form_widget(form.capaciteAdulte, {'attr': {'class': ' form-control p-2', 'placeholder': 'Adultes'}}) }}
+                            </div>
+
+                            <div class="col-md-6 mb-3">
+                                {{ form_widget(form.capaciteEnfant, {'attr': {'class': ' form-control p-2', 'placeholder': 'Enfants'}}) }}
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
+                                    <textarea class="form-control" placeholder="Special Request" id="message" style="height: 100px"></textarea>
+                                    <label for="message">Demande speciale</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <button class="btn btn-primary w-100 py-3 rounded" type="submit">Réserver maintenant</button>
+                            </div>
                         </div>
                     {{ form_end(form) }}
                     </div>
