mise a jour du filtre de recherche

--- a/templates/chambre/index.html.twig
+++ b/templates/chambre/index.html.twig
@@ -30,9 +30,10 @@
                                     <div class="row g-0">
                                         {{ form_label(form.dateArrivee,'Date Arrivée') }}
                                         <div class="col-6">
-                                            {{ form_widget(form.dateArrivee, {'attr': {'class': ' form-control-sm datepicker', 'placeholder': 'Date d\'arrivée'}}) }}                                        </div>
+                                            {{ form_widget(form.dateArrivee, {'attr': {'class': ' form-control-sm datepicker', 'placeholder': 'Date d\'arrivée' }}) }} 
+                                        </div>
                                         <div class="col-6">
-                                            {{ form_widget(form.dateDepart, {'attr': {'class': ' form-control-sm datepicker', 'placeholder': 'Date de départ'}}) }}
+                                            {{ form_widget(form.dateDepart, {'attr': {'class': ' form-control-sm datepicker', 'placeholder': 'Date de départ' }}) }}
                                         </div>
                                         
                                         
